# TyrantGameEngine

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
.config/linux/: setup.sh
.config/macos/: setup.sh
.config/unix/: setup.sh
CMake/: Config.cmake.in  Tyrant.cmake
Config/Unix/: setup.sh
Config/Windows/: configuration.winget  vsconfig.json
Docs/: CMakeLists.txt  Doxyfile.in
Docs/Pages/: DocumentationStyleGuide.md  Index.md  mainpage.dox
Docs/Styles/: doxygen_html_styles.css
Editor/: CMakeLists.txt
Editor/include/: Editor.hpp
Editor/source/: Editor.cpp
Runtime/: CMakeLists.txt
Runtime/Modules/Core/Private/include/Internal/Logging/: GlobalLogger.hpp
Runtime/Modules/Core/Private/source/Logging/: GlobalLogger.cpp  LogFormatter.cpp  LoggingOptions.cpp
Runtime/Modules/Core/Private/source/Logging/Sinks/: ConsoleLogSink.cpp  FileLogSink.cpp
Runtime/Modules/Core/Private/source/Services/: ServiceActivator.cpp  ServiceCollection.cpp  ServiceHost.cpp  ServiceLocator.cpp  ServiceProvider.cpp
Runtime/Modules/Core/Public/TGE/: Core.hpp
Runtime/Modules/Core/Public/TGE/Logging/: GlobalLogger.hpp  ILogDispatcher.hpp  ILogSink.hpp  LogFormatter.hpp  LogLevel.hpp  LogMessage.hpp  Logger.hpp  LoggingOptions.hpp
Runtime/Modules/Core/Public/TGE/Logging/Sinks/: ConsoleLogSink.hpp  FileLogSink.hpp
Runtime/Modules/Core/Public/TGE/Services/: Service.hpp  ServiceActivator.hpp  ServiceActivator.inl  ServiceCollection.hpp  ServiceCollection.inl  ServiceDescriptor.hpp  ServiceDescriptor.inl  ServiceHost.hpp  ServiceLifetime.hpp  ServiceLocator.hpp  ServiceLocator.inl  ServiceProvider.hpp  ServiceRegistry.hpp  ServiceTraits.hpp
Runtime/Modules/Core/include/: Core.hpp  Export.hpp
Runtime/Modules/Core/include/Logging/: Formatters.hpp  GlobalLogger.hpp  ILogSink.hpp  LogBuffer.hpp  LogFormatter.hpp  LogLevel.hpp  LogMessage.hpp  Logger.hpp  LoggingOptions.hpp
Runtime/Modules/Core/include/Logging/Sinks/: ConsoleLogSink.hpp  FileLogSink.hpp
Runtime/Modules/Core/include/Services/: Service.hpp  ServiceActivator.hpp  ServiceActivator.inl  ServiceCollection.hpp  ServiceCollection.inl  ServiceDescriptor.hpp  ServiceDescriptor.inl  ServiceHost.hpp  ServiceLifetime.hpp  ServiceLocator.hpp  ServiceLocator.inl  ServiceProvider.hpp  ServiceRegistry.hpp
Runtime/Modules/Core/source/: Core.cpp
Runtime/Modules/Core/source/Logging/: GlobalLogger.cpp  LogBuffer.cpp  LogFormatter.cpp  LogLevel.cpp  LoggingOptions.cpp
Runtime/Modules/Core/source/Logging/Sinks/: ConsoleLogSink.cpp  FileLogSink.cpp
Runtime/Modules/Core/source/Services/: ServiceActivator.cpp  ServiceCollection.cpp  ServiceHost.cpp  ServiceLocator.cpp  ServiceProvider.cpp
Tests/: CMakeLists.txt
Tests/Core/: EngineSmokeTest.cpp
Tests/Core/Benchmarks/: EngineBenchmarks.cpp  LoggingBenchmarks.cpp
Tests/Core/Unit/: EngineTests.cpp  LoggingTests.cpp  ServiceLocatorTests.cpp
